[package]
name = "doh"
description = "D'Oh - Directories Over HTTP"
repository = "https://github.com/thecoshman/doh"
readme = "README.md"
keywords = ["http", "client", "https", "file", "directory"]
categories = ["network-programming", "web-programming::http-client"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in http.md
authors = ["thecoshman <thecoshman@gmail.com>",
           "nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
serde_derive = "0.9"
lazy_static = "0.2"
tabwriter = "1.0"
reqwest = "0.5"
serde = "0.9"
clap = "2.23"
time = "0.1"
mime = "0.2"
url = "1.4"

[dev-dependencies]
serde_json = "0.9"


[[bin]]
name = "doh"
test = false
doc = false
