[package]
name = "doh"
description = "D'Oh - Directories Over HTTP"
repository = "https://github.com/thecoshman/doh"
readme = "README.md"
keywords = ["http", "client", "https", "file", "directory"]
categories = ["network-programming", "web-programming::http-client"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in doh.md
authors = ["thecoshman <thecoshman@gmail.com>",
           "nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
tabwriter = "1.0"
itertools = "0.6"
term_size = "0.3"
reqwest = "0.8"
rfsapi = "0.2"
getch = "0.2"
clap = "2.26"
time = "0.1"
url = "1.5"
pbr = "1.0"

[target.'cfg(target_os="windows")'.dependencies]
kernel32-sys = "0.2"
winapi = "0.2"

[target.'cfg(not(target_os="windows"))'.dependencies]
tinyfiledialogs = "3.0"


[[bin]]
name = "doh"
test = false
doc = false
